--- a/Parcial1/FlexBox/FlexBox.HTML
+++ b/Parcial1/FlexBox/FlexBox.HTML
@@ -19,14 +19,21 @@
     width: 100vw;
     flex-direction:row;
     flex-wrap: wrap;
-
+    justify-content: space-around;
     
 }
+
 .hijo{
     background-color: aqua;
     height: 300px;
+    width: 200px;
     border: 1px solid orange;
     color: aliceblue;
+}
+
+#caja2{
+    flex-grow: 2;
+    align-items: self-end;
 }
 </style>
 <body>
