--- a/Parcial1/Variables/Variables.HTML
+++ b/Parcial1/Variables/Variables.HTML
@@ -45,13 +45,23 @@
             color: var(--texto-dark);  
         }
         
+        img{
+            width: 50%;
+            height: 25%;
+            margin: 0 auto;
+            padding: 0%;
+            
+        }
     </style>
 </head>
 <body>
     <input type="checkbox">
     <div id="cont">
-        <h1>Encabezado</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quos sunt inventore blanditiis hic officia, modi ab expedita aperiam voluptatum, quasi alias molestiae eveniet id tempore? Illo suscipit deserunt ipsum ad, eius harum rerum mollitia provident cupiditate ab nemo molestiae totam? Vero similique expedita ratione, quasi adipisci aliquam in amet?</p>
+        <h1>El Lobo</h1>
+        <img src="https://www.nationalgeographic.com.es/medio/2022/09/27/ejemplar-de-lobo-artico_e3aaad84_480x480.jpg" >
+      <p>El lobo, más conocido con el nombre científico de Canis Lupus es un mamífero placentario del orden de los carnívoros. Los lobos siempre han sido objeto de la leyenda debido a su aullido, el cual usan para comunicarse. Un lobo solitario puede aullar para atraer la atención de su manada del mismo modo que los aullidos de una manada pueden actuar como mensajes territoriales entre varias de ellas. 
+
+        Los lobos se agrupan en manadas de entre 6 y 20 animales y generalmente dirigida por una pareja reproductora y dominante.  Son animales muy inteligentes que viven organizados en manadas, que por lo general no suelen superar los quince o veinte miembros como máximo, y cuya estructura jerárquica está muy marcada. </p>
     </div>
 </body>
 </html>
