--- a/Parcial2/LayoutGridAnimaciones/LayoutGridA.HTML
+++ b/Parcial2/LayoutGridAnimaciones/LayoutGridA.HTML
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div id="cont" class="contenedor">
-      <div id="encabezado" class="caja 1"></div>
-      <div id="barralat" class="caja 2"></div>
-      <div id="contenido" class="caja 3"></div>
-      <div id="piedepagina" class="caja 4"></div>
-      <div id="otracosa" class="caja 5"></div>
-      <div id="otracosa2" class="caja 6"></div>
+      <div id="encabezado" class="caja"></div>
+      <div id="barralat" class="caja"></div>
+      <div id="contenido" class="caja"></div>
+      <div id="piedepagina" class="caja "></div>
+      <div id="otracosa" class="caja "></div>
+      <div id="otracosa2" class="caja "></div>
     </div>
     
 </body>
